--- a/MyVet01.Web/Views/Shared/_Layout.cshtml
+++ b/MyVet01.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Owners" asp-action="Index">Dueños</a></li>
+                    <li><a asp-area="" asp-controller="Agendas" asp-action="Index">Agenda</a></li>
                 </ul>
             </div>
         </div>
