--- a/MyVet01.Web/Views/Managers/Index.cshtml
+++ b/MyVet01.Web/Views/Managers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyVet01.Web.Data.Entities.Owner>
+﻿@model IEnumerable<MyVet01.Web.Data.Entities.Manager>
 
 @{
     ViewData["Title"] = "Index";
