--- a/MyVet01.Web/Views/Shared/_Layout.cshtml
+++ b/MyVet01.Web/Views/Shared/_Layout.cshtml
@@ -26,15 +26,33 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MyVet01.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Almacén</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Owners" asp-action="Index">Dueños</a></li>
-                    <li><a asp-area="" asp-controller="Agendas" asp-action="Index">Agenda</a></li>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <li><a asp-area="" asp-controller="Owners" asp-action="Index">Dueños</a></li>
+                        <li><a asp-area="" asp-controller="Agendas" asp-action="Index">Agenda</a></li>
+
+                    }
+                    <li><a asp-area="" asp-controller="Managers" asp-action="Index">Admins</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="Account" asp-action="ChangeUser">@User.Identity.Name</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Logout">Cerrar Sesión</a></li>
+                    }
+                    else
+                    {
+                <li><a asp-area="" asp-controller="Account" asp-action="Login">Ingresar</a></li>
+
+                    }
+
                 </ul>
             </div>
         </div>
@@ -46,7 +64,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - MyVet01.Web</p>
+            <p>&copy; 2019 - J2H Consultoría y Desarrollo de Software S.A.C.</p>
         </footer>
     </div>
 
