--- a/MyVet01.Web/Views/Owners/Details.cshtml
+++ b/MyVet01.Web/Views/Owners/Details.cshtml
@@ -10,9 +10,121 @@
     <h4>Owner</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Document)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Document)
+
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.FullName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.FullName)
+
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Email)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Email)
+
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.PhoneNumber)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.PhoneNumber)
+
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Address)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Address)
+
+        </dd>
+        <dt>
+            # Mascotas
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Pets.Count)
+
+        </dd>
+
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Modificar</a>
+    <a asp-action="CreatePet" asp-route-id="@Model.Id" class="btn btn-primary">Agregar</a>
+    <a asp-action="Index" class="btn btn-success">Regresar</a>
 </div>
+
+
+@*PARA AGREGAR EL LISTADO DE MASCOTAS*@
+@if (Model.Pets.Count == 0)
+{
+    <h4>No hay mascotas añadidas</h4>
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Race)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().PetType.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().BornLocal)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Remarks)
+                </th>
+                <th>
+                    # Historias
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Pets )
+            {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Race )
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PetType.Name )
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BornLocal )
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Remarks)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Histories.Count)
+                </td>
+                <td>
+                    <a asp-action="EditPet" asp-route-id="@item.Id" class="btn btn-warning">Modificar</a> |
+                    <a asp-action="DetailsPet" asp-route-id="@item.Id" class="btn btn-info">Detalles</a> |
+                    <a asp-action="DeletePet" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+
+}
+
+
