--- a/MyVet01.Web/Views/Shared/_Layout.cshtml
+++ b/MyVet01.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                     {
                         <li><a asp-area="" asp-controller="Owners" asp-action="Index">Dueños</a></li>
                         <li><a asp-area="" asp-controller="Agendas" asp-action="Index">Agenda</a></li>
+                        <li><a asp-area="" asp-controller="PetTypes" asp-action="Index">Tipo-Mascotas</a></li>
 
                     }
                     <li><a asp-area="" asp-controller="Managers" asp-action="Index">Admins</a></li>
